WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136913
Incorrect pending API request URL when loading an HTML string
https://bugs.webkit.org/show_bug.cgi?id=136913
Summary
Incorrect pending API request URL when loading an HTML string
Carlos Garcia Campos
Reported
2014-09-18 01:27:45 PDT
The check to decide whether to use the given baseURL or about:blank is wrong there: String pendingAPIRequestURL = baseURL.isEmpty() ? baseURL : ASCIILiteral("about:blank"); It should be the opposite.
Attachments
Patch
(1.49 KB, patch)
2014-09-18 01:29 PDT
,
Carlos Garcia Campos
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-09-18 01:29:48 PDT
Created
attachment 238296
[details]
Patch Trivial fix
Alexey Proskuryakov
Comment 2
2014-09-18 09:20:47 PDT
Comment on
attachment 238296
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=238296&action=review
> Source/WebKit2/UIProcess/WebPageProxy.cpp:795 > + m_pageLoadState.setPendingAPIRequestURL(transaction, !baseURL.isEmpty() ? baseURL : ASCIILiteral("about:blank"));
Nice. Can this be tested?
Alexey Proskuryakov
Comment 3
2014-09-18 09:22:55 PDT
Comment on
attachment 238296
[details]
Patch I see, it's tested in a patch for the bug blocked by this one.
Carlos Garcia Campos
Comment 4
2014-09-18 10:37:02 PDT
Committed
r173726
: <
http://trac.webkit.org/changeset/173726
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug