Incorrect pending API request URL when loading an HTML string https://bugs.webkit.org/show_bug.cgi?id=136913

Reviewed by Alexey Proskuryakov.

Use about:blank as pending API request URL when the given base URL
is empty, otherwise use the given base URL.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadHTMLString):

Canonical link: https://commits.webkit.org/154742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173726 268f45cc-cd09-0410-ab3c-d52691b4dbfc